# ChangeLog for sys-apps/sg3_utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sg3_utils/ChangeLog,v 1.27 2007/03/08 19:41:11 gustavoz Exp $

  08 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> sg3_utils-1.23.ebuild:
  Stable on sparc

*sg3_utils-1.23 (02 Feb 2007)

  02 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +sg3_utils-1.23.ebuild:
  Version bump

  16 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> sg3_utils-1.22.ebuild:
  Stable on sparc

*sg3_utils-1.22 (24 Oct 2006)

  24 Oct 2006; Mike Frysinger <vapier@gentoo.org> +sg3_utils-1.22.ebuild:
  Version bump.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  -sg3_utils-1.08.ebuild, -sg3_utils-1.15.ebuild, -sg3_utils-1.18.ebuild,
  -sg3_utils-1.19.ebuild, -sg3_utils-1.20.ebuild, -sg3_utils-1.20-r1.ebuild,
  sg3_utils-1.21.ebuild:
  1.21 sparc/hppa stable and cleanup

*sg3_utils-1.21 (14 Sep 2006)

  14 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  +sg3_utils-1.21.ebuild:
  Revbump thanks to Douglas Gilbert

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  sg3_utils-1.20-r1.ebuild:
  Stable on hppa

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  sg3_utils-1.20-r1.ebuild:
  Keyworded ~hppa

  28 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  sg3_utils-1.20-r1.ebuild:
  Stable on sparc

*sg3_utils-1.20-r1 (30 Apr 2006)

  30 Apr 2006; Robin H. Johnson <robbat2@gentoo.org>
  +sg3_utils-1.20-r1.ebuild:
  Cleanup of Makefile mangling.

*sg3_utils-1.20 (20 Apr 2006)

  20 Apr 2006; Robin H. Johnson <robbat2@gentoo.org> +sg3_utils-1.20.ebuild:
  Version bump.

*sg3_utils-1.19 (20 Feb 2006)

  20 Feb 2006; Robin H. Johnson <robbat2@gentoo.org> +sg3_utils-1.19.ebuild:
  Version bump. Also install documentation and hxascdmp utility.

  06 Jan 2006; Tom Martin <slarti@gentoo.org> sg3_utils-1.18.ebuild:
  Fix typo in sed, resolves bug #118040.

  29 Dec 2005; Tom Martin <slarti@gentoo.org> sg3_utils-1.18.ebuild: