@@ -1,12 +1,12 @@
 DIST rescan-scsi-bus.sh-1.24 11369 RMD160 b1b743ff7def0ef80152f03606fdf2064d376940 SHA1 90b2b92b0e103041fa6b5f6cdf4a2f30bd98c45f SHA256 5403713f3ac21055bdcae3de2cf3bd2b9bd552e666de64732accbde6c1c31dc2
-EBUILD rescan-scsi-bus-1.24.ebuild 809 RMD160 d6719b0910675c8ea9b38a8103977fd997a9fdb4 SHA1 7fae320064505ba96d85d5d533182263a982cd3e SHA256 f63167af1603d42fc233d3342d59d5a26f17d1992babfcdb37409dfe8e7a7bf7
-MD5 2f5cd30469db3d4bd4e9daa65badc83e rescan-scsi-bus-1.24.ebuild 809
-RMD160 d6719b0910675c8ea9b38a8103977fd997a9fdb4 rescan-scsi-bus-1.24.ebuild 809
-SHA256 f63167af1603d42fc233d3342d59d5a26f17d1992babfcdb37409dfe8e7a7bf7 rescan-scsi-bus-1.24.ebuild 809
-MISC ChangeLog 474 RMD160 9d63a8f3c551d811f5c268f683df13282614782d SHA1 dc794c362d96adfa5cec754c562212f98554727d SHA256 4ceec60b8e3832aada21fd1ad9da8773f5599231df979b76fe051b59d372ec3d
-MD5 5622df60172cb867557da8a4c2727dc3 ChangeLog 474
-RMD160 9d63a8f3c551d811f5c268f683df13282614782d ChangeLog 474
-SHA256 4ceec60b8e3832aada21fd1ad9da8773f5599231df979b76fe051b59d372ec3d ChangeLog 474
+EBUILD rescan-scsi-bus-1.24.ebuild 822 RMD160 bd00ad78dea4619054b5dc71778eee0d7f4497ad SHA1 ae5e3489e536cab51545cb9e7fbb7526c929ed0d SHA256 adf22098fb88042e8a03de2b36829bc1053da6c2c95f7bb17f0aed54bbc3b186
+MD5 d36af107b0f064876b0bc67371117688 rescan-scsi-bus-1.24.ebuild 822
+RMD160 bd00ad78dea4619054b5dc71778eee0d7f4497ad rescan-scsi-bus-1.24.ebuild 822
+SHA256 adf22098fb88042e8a03de2b36829bc1053da6c2c95f7bb17f0aed54bbc3b186 rescan-scsi-bus-1.24.ebuild 822
+MISC ChangeLog 651 RMD160 1248d840c63891f7953638ffb91c90c33242b454 SHA1 fb2a36fe7f9ca6dd4eecc7041cbecf29f6ad5223 SHA256 537a20e844c6eddd9e6e0590ee9d2fa3fa823319a069cc6448bf84003fc51fcd
+MD5 1506ff0be94a8656e7667e771106f271 ChangeLog 651
+RMD160 1248d840c63891f7953638ffb91c90c33242b454 ChangeLog 651
+SHA256 537a20e844c6eddd9e6e0590ee9d2fa3fa823319a069cc6448bf84003fc51fcd ChangeLog 651
 MISC metadata.xml 227 RMD160 e54f63c709ba122fa8d5931652deb3821a967981 SHA1 84c05df3fda91de26beaaf15ffdbf4ea15b3784b SHA256 eb6179099f91f31168c95bd4a018a01f37aa1eb8d9ba8d3ed039056bac71bcf8
 MD5 e25e70948beb656da0b6fa0b48124f16 metadata.xml 227
 RMD160 e54f63c709ba122fa8d5931652deb3821a967981 metadata.xml 227
