@@ -1,0 +1,3 @@
+MD5 8ca3f643057855bf98b9487f96ea486c sg3_utils-1.24.tgz 536253
+RMD160 b23ba8e96918b7c111a4178d06c5b3bce2b62ae5 sg3_utils-1.24.tgz 536253
+SHA256 b3798f845523d4e9858434ae468db2341547c8a58876c7c83e9fd84f82ce05d9 sg3_utils-1.24.tgz 536253
